--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "webpack": "webpack",
-    "start": "http-server"
+    "watch": "webpack",
+    "server": "webpack-dev-server --watchContentBase --open"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -9,7 +9,8 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4"
