--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "watch": "webpack",
-    "server": "webpack-dev-server --watchContentBase --open"
+    "watch": "webpack --watch --watchContentBase"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -9,8 +8,7 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-cli": "^3.3.4"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0"
