--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.7.0"
+    "@babel/polyfill": "^7.7.0",
+    "css-loader": "^3.4.2",
+    "style-loader": "^1.1.3"
   }
 }
