--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "scripts": {
-    "watch": "webpack --watch --watchContentBase"
+    "watch": "webpack --watch --watchContentBase",
+	 "watch_server": "npx webpack serve --watch-content-base"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.15",
+    "@webpack-cli/serve": "^1.3.1",
+    "babel-loader": "^8.2.2",
     "css-loader": "^3.4.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
