--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "watch": "webpack --watch --watchContentBase",
-	 "watch_server": "npx webpack serve --watch-content-base"
+    "watch_server": "npx webpack serve --watch-content-base"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -12,7 +12,8 @@
     "css-loader": "^3.4.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "ssri": ">=8.0.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
