--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
 		"backend:nestjs:debug": "cd backend/underyourskin/nestjs; npm run start:debug",
 		"postinstall": "cd backend/underyourskin/nestjs; npm i"
 	},
+	"dependencies": {
+		"@babel/polyfill": "^7.7.0"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.13.15",
 		"@babel/plugin-proposal-class-properties": "^7.13.0",
 		"@babel/preset-env": "^7.13.15",
+		"@babel/preset-typescript": "^7.13.0",
 		"@webpack-cli/serve": "^1.3.1",
 		"babel-loader": "^8.2.2",
+		"circular-json": "^0.5.9",
+		"ssri": ">=8.0.1",
+		"style-loader": "^1.1.3",
 		"css-loader": "^3.4.2",
+		"ts-loader": "^9.1.2",
+		"typescript": "^4.2.4",
 		"webpack": "^4.46.0",
 		"webpack-cli": "^4.5.0",
-		"webpack-dev-server": "^3.11.2",
-		"ssri": ">=8.0.1"
-	},
-	"dependencies": {
-		"@babel/polyfill": "^7.7.0",
-		"css-loader": "^3.4.2",
-		"style-loader": "^1.1.3"
+		"webpack-dev-server": "^3.11.2"
 	}
 }
