--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"postinstall": "cd backend/underyourskin/nestjs; npm i"
 	},
 	"dependencies": {
+		"@babel/plugin-transform-react-jsx": "^7.14.5",
 		"@babel/polyfill": "^7.7.0"
 	},
 	"devDependencies": {
@@ -17,12 +18,13 @@
 		"@webpack-cli/serve": "^1.3.1",
 		"babel-loader": "^8.2.2",
 		"circular-json": "^0.5.9",
+		"css-loader": "^3.4.2",
+		"object-hash": "^2.2.0",
 		"ssri": ">=8.0.1",
 		"style-loader": "^1.1.3",
-		"css-loader": "^3.4.2",
 		"ts-loader": "^9.1.2",
 		"typescript": "^4.2.4",
-		"webpack": "^4.46.0",
+		"webpack": "^5.38.1",
 		"webpack-cli": "^4.5.0",
 		"webpack-dev-server": "^3.11.2"
 	}
